src/test/deca/context/invalid/assign-auto-ref.deca
// Description:
//    Assign un float a un int
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : An assignation between a int and a float is not possible (rule 3.32)
//
// Historique:
//    cree le 06/01/2023

{
    int i;
    int j = i;
    print(i);
}